--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -87,6 +87,26 @@ h6 {
     line-height: 3.5rem;
 }
 
+.markdown p,
+.markdown h1,
+.markdown h2,
+.markdown h3,
+.markdown h4,
+.markdown h5,
+.markdown h6{
+    margin-bottom: 1em;
+}
+
+.markdown ul{
+    margin-bottom: 1em;
+    list-style: disc;
+}
+
+.markdown li{
+    margin-left: 1em;
+    list-style: disc;
+}
+
 .p-large {
     font-size: 1.125rem;
     line-height: 1.75rem;
