--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -750,13 +750,12 @@ input[type="checkbox"] {
 }
 
 .slider-1 .card-image {
-    width: 80px;
-    height: 80px;
+    width: 200px;
+    height: 200px;
     margin-right: auto;
     margin-bottom: 1.25rem;
     margin-left: auto;
-    border-radius: 50%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .slider-1 .testimonial-author {
