Fix wording and screenshots

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -53,6 +53,10 @@ p {
     font: 400 1rem/1.625rem "Open Sans", sans-serif;
 }
 
+p > a {
+    color: #E63312;
+}
+
 main{
     padding-top: 80px;
 }
