--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1299,9 +1299,17 @@ a:hover.back-to-top {
 }
 
 .home-video {
+    position: relative;
+    width:100%;
+    padding-bottom: 56.25%;
     margin: auto;
 }
 
 .home-video iframe {
+    position: absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
     border-radius: 12px;
 }
