--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1337,3 +1337,39 @@ a:hover.back-to-top {
     font-size: 1rem;
     list-style: decimal;
 }
+
+.md-typeset h1 {
+    font-size: 2.075rem;
+    font-weight: 400;
+    text-transform: none;
+}
+
+.md-typeset h2 {
+    font-size: 1.9rem;
+    font-weight: 400;
+    text-transform: none;
+}
+
+.md-typeset h3 {
+    font-size: 1.725rem;
+    font-weight: 400;
+    text-transform: none;
+}
+
+.md-typeset h4 {
+    font-size: 1.55rem;
+    font-weight: 400;
+    text-transform: none;
+}
+
+.md-typeset h5 {
+    font-size: 1.375rem;
+    font-weight: 400;
+    text-transform: none;
+}
+
+.md-typeset h6 {
+    font-size: 1.2rem;
+    font-weight: 400;
+    text-transform: none;
+}
